--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,10 @@
+<nav class="navbar navbar-dark bg-dark">
+  <!-- Navbar content -->
+</nav>
+
+<p>                     </p>
+
 <h1> Bienvenue </h1>
 
 <p> Voici les events de toutes ta ville </p>
+
